Thu Apr 16 16:11:07 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:

          Added new section anticipating version 1.7.

Tue Apr 14 10:06:19 CDT 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * TAO version 1.6.9 released.

Tue Apr 14 13:57:16 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:

          Reworded entries to be consistent with release note.

Fri Apr 10 12:44:12 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Sequence_Unit_Tests/clean_tao_export.pl:
        * tests/Sequence_Unit_Tests/run_test.pl:
        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_nocopy_ut.cpp:
        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:

          Reverted my previous attempts to fix this test on windows
          and disabled unbounded octet sequence test on this platform.

Fri Apr 10 12:17:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          3630 is not fixed yet

Thu Apr  9 11:01:26 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_nocopy_ut.cpp:
        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:

          There were compile errors on Linux and Solaris builds with
          previous attempt to fix octet sequence test on Windows. Now
          those custom build steps are done only on windows builds.

Wed Apr  8 12:45:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/NamingViewer/BindDialog.cpp
        * utils/NamingViewer/BindDialog.h
        * utils/NamingViewer/BindNewContext.cpp
        * utils/NamingViewer/BindNewContext.h
          Unicode fixes

Tue Apr  7 09:01:37 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Sequence_Unit_Tests/clean_tao_export.pl:
        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_nocopy_ut.cpp:
        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:
